added the previous version info

--- a/server-timing/Overview.html
+++ b/server-timing/Overview.html
@@ -525,6 +525,8 @@ table.exceptions table {
       <dd><a href="http://www.w3.org/TR/server-timing/">http://www.w3.org/TR/server-timing/</a></dd>
       <dt>Latest editor's draft:</dt>
       <dd><a href="https://w3c.github.io/server-timing/">https://w3c.github.io/server-timing/</a></dd>
+      <dt>Previous version:</dt>
+      <dd><a rel="dcterms:replaces" href="http://www.w3.org/TR/2015/WD-server-timing-20150717/">http://www.w3.org/TR/2015/WD-server-timing-20150717/</a></dd>
     <dt>Editor:</dt>
     <dd class="p-author h-card vcard" property="bibo:editor" resource="_:editor0" data-editor-id="56102"><span property="rdf:first" typeof="foaf:Person"><meta property="foaf:name" content="Ilya Grigorik"><a class="u-url url p-name fn" property="foaf:homepage" href="https://www.igvita.com/">Ilya Grigorik</a>, <a property="foaf:workplaceHomepage" class="p-org org h-org h-card" href="https://www.google.com/">Google</a>, <span class="ed_mailto"><a class="u-email email" property="foaf:mbox" href="mailto:igrigorik@gmail.com">igrigorik@gmail.com</a></span></span>
 <span property="rdf:rest" resource="rdf:nil"></span>
