--- a/indexeddb/index.html
+++ b/indexeddb/index.html
@@ -470,7 +470,7 @@
 		font-style: normal;
 	}
 	dt dfn code, code.idl {
-		font-size: normal;
+		font-size: medium;
 	}
 	dfn var {
 		font-style: normal;
@@ -1435,7 +1435,7 @@ pre.idl.highlight { color: #708090; }
         .highlight .vi { color: #0077aa } /* Name.Variable.Instance */
         .highlight .il { color: #000000 } /* Literal.Number.Integer.Long */
         </style>
-  <link href="https://www.w3.org/StyleSheets/TR/W3C-WD" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" type="text/css" href="https://www.w3.org/StyleSheets/TR/2016/W3C-WD"/>
 </head>
  <body class="h-entry">
   <div class="head">
@@ -1445,14 +1445,14 @@ pre.idl.highlight { color: #708090; }
    <div data-fill-with="spec-metadata">
     <dl>
      <dt>This version:
-     <dd><a href="https://www.w3.org/TR/2016/WD-IndexedDB-2-20161101/" rel="this">https://www.w3.org/TR/2016/WD-IndexedDB-2-20161101/</a>
+     <dd><a href="https://www.w3.org/TR/2016/WD-IndexedDB-2-20161101/">https://www.w3.org/TR/2016/WD-IndexedDB-2-20161101/</a>
      <dt>Latest published version:
-     <dd><a href="https://www.w3.org/TR/IndexedDB-2/" rel="published">https://www.w3.org/TR/IndexedDB-2/</a>
+     <dd><a href="https://www.w3.org/TR/IndexedDB-2/">https://www.w3.org/TR/IndexedDB-2/</a>
      <dt>Latest editor's draft:
      <dd><a class="u-url" href="https://w3c.github.io/IndexedDB/">https://w3c.github.io/IndexedDB/</a>
      <dt>Previous Versions:
-     <dd><a href="https://www.w3.org/TR/2016/WD-IndexedDB-2-20160818/" rel="previous">https://www.w3.org/TR/2016/WD-IndexedDB-2-20160818/</a>
-     <dd><a href="https://www.w3.org/TR/2015/REC-IndexedDB-20150108/" rel="previous">https://www.w3.org/TR/2015/REC-IndexedDB-20150108/</a>
+     <dd><a href="https://www.w3.org/TR/2016/WD-IndexedDB-2-20160818/">https://www.w3.org/TR/2016/WD-IndexedDB-2-20160818/</a>
+     <dd><a href="https://www.w3.org/TR/2015/REC-IndexedDB-20150108/">https://www.w3.org/TR/2015/REC-IndexedDB-20150108/</a>
      <dt>Feedback:
      <dd><span><a href="mailto:public-webapps@w3.org?subject=%5BIndexedDB%5D%20YOUR%20TOPIC%20HERE">public-webapps@w3.org</a> with subject line “<kbd>[IndexedDB] <i data-lt="">… message topic …</i></kbd>” (<a href="https://lists.w3.org/Archives/Public/public-webapps/" rel="discussion">archives</a>)</span>
      <dt>Test Suite:
