--- a/dom41/index.html
+++ b/dom41/index.html
@@ -5935,7 +5935,7 @@ and false otherwise. </p>
     <h3 class="heading settled" data-level="8.1" id="historical-changes-wd3-wd2"><span class="secno">8.1. </span><span class="content">Changes between this draft and the <a href="https://www.w3.org/TR/2017/WD-dom41-20170420/">2nd Working Draft of DOM 4.1</a></span><a class="self-link" href="#historical-changes-wd3-wd2"></a></h3>
     <dl>
      <dt><a href="https://github.com/w3c/dom/commit/64e26b88607b4b49e2c0b9d1207e88569e4a85a5">Use a single concept for attribute change steps of Element</a> 
-     <dt><a href="https://github.com/w3c/dom/commit/271987a0246b7b3ff89067b28cb5405d7bdcaec2">Updates to <a class="property" data-link-type="propdesc">Event</a></a> 
+     <dt><a href="https://github.com/w3c/dom/commit/271987a0246b7b3ff89067b28cb5405d7bdcaec2">Updates to Event</a> 
      <dd>added <code>EventListernerOptions</code>/<code>AddEventListenerOptions</code>, and make some changes to the steps of dispatching events, and 
      <dd>imported realm from ES standard to ensure security 
      <dt><a href="https://github.com/w3c/dom/commit/f21beacd2fe64f5070b4fa86446122d4fc45eafd">Changes to <a class="property" data-link-type="propdesc">Sets</a></a> 
