--- a/dom41/index.html
+++ b/dom41/index.html
@@ -5936,12 +5936,12 @@ and false otherwise. </p>
     <dl>
      <dt><a href="https://github.com/w3c/dom/commit/64e26b88607b4b49e2c0b9d1207e88569e4a85a5">Use a single concept for attribute change steps of Element</a> 
      <dt><a href="https://github.com/w3c/dom/commit/271987a0246b7b3ff89067b28cb5405d7bdcaec2">Updates to Event</a> 
-     <dd>added <code>EventListernerOptions</code>/<code>AddEventListenerOptions</code>, and make some changes to the steps of dispatching events, and 
-     <dd>imported realm from ES standard to ensure security 
-     <dt><a href="https://github.com/w3c/dom/commit/f21beacd2fe64f5070b4fa86446122d4fc45eafd">Changes to <a class="property" data-link-type="propdesc">Sets</a></a> 
-     <dd>define token set for <code>DOMTokenList</code>, and 
-     <dd>define <code>supports()</code> for <code>DOMTokenList</code>, and 
-     <dd>updated the <code>normalize()</code> method of <code>DOMTokenList</code> to avoid duplication 
+     <dd>added <code>EventListernerOptions</code>/<code>AddEventListenerOptions</code>, and make some changes to the steps of dispatching events, and
+     <dd>imported realm from ES standard to ensure security
+     <dt><a href="https://github.com/w3c/dom/commit/f21beacd2fe64f5070b4fa86446122d4fc45eafd">Changes to Sets</a> 
+     <dd>define token set for <code>DOMTokenList</code>, and
+     <dd>define <code>supports()</code> for <code>DOMTokenList</code>, and
+     <dd>updated the <code>normalize()</code> method of <code>DOMTokenList</code> to avoid duplication
      <dt><a href="https://github.com/w3c/dom/commit/bba06789b41fd55b0f0ae016035beead2a5068d4">Add append()/prepend() to ParentNode</a> 
      <dt><a href="https://github.com/w3c/dom/commit/d00874005cb8ccd8c692ff4e0d743d3b507e9b3e">Throw an error if the event constructor isn’t exposed</a> 
      <dt><a href="https://github.com/w3c/dom/commit/47f92af56e0891e075eab36c9d0b1839c8255a27">Throw an <code>HierarchyRequestError</code> if range’s start node is node</a> 
