--- a/microdata/Overview.html
+++ b/microdata/Overview.html
@@ -221,36 +221,14 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 
   <style>
     /* Styles for SVG */
-
-    rect,
-    ellipse {
-      fill: none
-    }
-
-    .item {
-      stroke: #005;
-      stroke-width: 2
-    }
-
-    .value-box {
-      stroke: #dd0;
-      stroke-width: 2
-    }
-
     text {
       font-family: "Arial";
       font-size: 14px;
-      fill: #f00
     }
 
     .property,
     .iteminfo {
-      fill: #00a;
       font-size: 8px
-    }
-
-    .value {
-      fill: #000
     }
   </style>
   <link href="https://www.w3.org/StyleSheets/TR/2016/W3C-ED" rel="stylesheet" type="text/css">
@@ -556,7 +534,7 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
       <a href="https://github.com/w3c/microdata/pull/49">how property names are determined</a> and questions of internationalisation. A <a href="#changes">list of substantive changes</a> is included to help guide reviewers, as well as full details of changes made. Ideally review comments will be provided before 15 July 2017, and a Candidate Recommendation incorporating revisions published by the end of July.</p>
     <!-- where to send feedback (required) -->
     <p>If you wish to make comments regarding this document please
-      <a href="https://github.com/w3c/microdata">submit them as github issues</a>. All feedback is welcome, but please note the
+      <a href="https://github.com/w3c/microdata/issues">submit them as github issues</a>. All feedback is welcome, but please note the
       <a href="https://github.com/w3c/microdata/blob/master/CONTRIBUTING.md">contribution guidelines</a> require agreement to the terms of the <abbr title="World Wide Web Consortium">W3C</abbr> Patent Policy for substantive contributions.</p>
 
     <p>
