--- a/microdata/Overview.html
+++ b/microdata/Overview.html
@@ -1152,7 +1152,8 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
           <dd>
           </dd><dt>http://example.com/fn</dt>
           <dd>Hedral</dd>
-          <dt>http://myvocab.example.org/animals/desc</dt> Hedral is a male american domestic shorthair, with a fluffy black fur with white paws and belly.
+          <dt>http://myvocab.example.org/animals/desc</dt> 
+          <dd>Hedral is a male american domestic shorthair, with a fluffy black fur with white paws and belly.</dd>
           <dt>http://example.com/color</dt>
           <dd>black</dd>
           <dt>http://example.com/color</dt>
@@ -1228,7 +1229,7 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
         <li>If there is only one unique value in <var>potential values return that value. Otherwise return the 
     first item in <var>potential values</var>.</var>
         </li>
-
+      </ul>
 
         <p>User agents must not automatically dereference <em>unknown</em> <a data-lt="URL" href="#dfn-url" class="internalDFN" data-link-type="dfn">URLs</a> given as <a href="#dfn-item-types" class="internalDFN" data-link-type="dfn">item types</a> and <a href="#dfn-property-names" class="internalDFN" data-link-type="dfn">property names</a>. These URLs are <i>a priori</i> opaque identifiers.</p>
 
