--- a/microdata/Overview.html
+++ b/microdata/Overview.html
@@ -1949,7 +1949,7 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
         <dd>
         <div class="note">
           <div class="note-title marker" aria-level="4" role="heading" id="h-note5"><span>Note</span></div>
-          <dd class="">This attribute performs a function similar to the combination of <code>vocab</code> and <code>typeof</code> attributes in [<cite><a class="bibref" href="#bib-rdfa-core">rdfa-core</a></cite>].
+          <p>This attribute performs a function similar to the combination of <code>vocab</code> and <code>typeof</code> attributes in [<cite><a class="bibref" href="#bib-rdfa-core">rdfa-core</a></cite>].</p>
         </div>
         </dd>
 
