--- a/microdata/Overview.html
+++ b/microdata/Overview.html
@@ -1955,10 +1955,12 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 
         <dt><a href="#dfn-itemprop" class="internalDFN" data-link-type="dfn"><code>itemprop</code></a></dt>
         <dd>When present on an element, it identifies that the element provides the <a href="#dfn-value" class="internalDFN" data-link-type="dfn">property value</a> of the <a href="#dfn-item" class="internalDFN" data-link-type="dfn">item</a> in which it appears, and the attribute's value defines the <a href="#dfn-property-names" class="internalDFN" data-link-type="dfn">property name</a>.</dd>
+        <dd>
         <div class="note">
           <div class="note-title marker" aria-level="4" role="heading" id="h-note6"><span>Note</span></div>
-          <dd class="">This attribute is equivalent to the <code>property</code> attribute in [<cite><a class="bibref" href="#bib-rdfa-core">rdfa-core</a></cite>].</dd>
+         <p>This attribute is equivalent to the <code>property</code> attribute in [<cite><a class="bibref" href="#bib-rdfa-core">rdfa-core</a></cite>].</p>
         </div>
+        </dd>
 
         <dt><a href="#dfn-itemid" class="internalDFN" data-link-type="dfn"><code>itemid</code></a></dt>
         <dd>This is an <a href="#dfn-absolute-url" class="internalDFN" data-link-type="dfn">absolute URL</a> that provides a global identifier for an <a href="#dfn-item" class="internalDFN" data-link-type="dfn">item</a>.</dd>
