--- a/indexeddb/Overview.html
+++ b/indexeddb/Overview.html
@@ -469,9 +469,6 @@
 	a > i { /* Instance of term */
 		font-style: normal;
 	}
-	dt dfn code, code.idl {
-		font-size: normal;
-	}
 	dfn var {
 		font-style: normal;
 	}
@@ -1454,7 +1451,7 @@ pre.idl.highlight { color: #708090; }
         .highlight .vi { color: #0077aa } /* Name.Variable.Instance */
         .highlight .il { color: #000000 } /* Literal.Number.Integer.Long */
         </style>
-  <link href="https://www.w3.org/StyleSheets/TR/W3C-WD" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" type="text/css" href="https://www.w3.org/StyleSheets/TR/2016/W3C-WD"/>
  <body class="h-entry">
   <div class="head">
    <p data-fill-with="logo"><a class="logo" href="https://www.w3.org/"> <img alt="W3C" height="48" src="https://www.w3.org/StyleSheets/TR/2016/logos/W3C" width="72"> </a> </p>
@@ -1866,11 +1863,11 @@ opaque sequences of 16-bit code units.</p>
   can store.</p>
    </aside>
    <p>A <dfn class="dfn-paneled" data-dfn-type="dfn" data-noexport="" id="sorted-name-list">sorted name list</dfn> is a list containing <a data-link-type="dfn" href="#name" id="ref-for-name-3">names</a> sorted in ascending order by 16-bit code unit.</p>
-   <details class="note"> This matches the <a data-link-type="dfn" href="https://tc39.github.io/ecma262/#sec-array.prototype.sort">Array.prototype.sort</a> on an <a data-link-type="dfn" href="https://tc39.github.io/ecma262/#sec-array-objects">Array</a> of <a data-link-type="dfn" href="https://tc39.github.io/ecma262/#sec-terms-and-definitions-string-type">Strings</a>. This ordering compares the 16-bit code units in each
+   <p class="note"> This matches the <a data-link-type="dfn" href="https://tc39.github.io/ecma262/#sec-array.prototype.sort">Array.prototype.sort</a> on an <a data-link-type="dfn" href="https://tc39.github.io/ecma262/#sec-array-objects">Array</a> of <a data-link-type="dfn" href="https://tc39.github.io/ecma262/#sec-terms-and-definitions-string-type">Strings</a>. This ordering compares the 16-bit code units in each
   string, producing a highly efficient, consistent, and deterministic
   sort order. The resulting list will not match any particular
   alphabet or lexicographical order, particularly for code points
-  represented by a surrogate pair. </details>
+  represented by a surrogate pair. </p>
    <h3 class="heading settled" data-level="2.1" id="database-construct"><span class="secno">2.1. </span><span class="content">Database</span><a class="self-link" href="#database-construct"></a></h3>
    <p>Each <a data-link-type="dfn" href="https://www.w3.org/TR/css-cascade-3/#origin">origin</a> has an associated set of <a data-link-type="dfn" href="#database" id="ref-for-database-1">databases</a>. A <dfn class="dfn-paneled" data-dfn-type="dfn" data-noexport="" id="database">database</dfn> has zero or more <a data-link-type="dfn" href="#object-store" id="ref-for-object-store-1">object stores</a> which
 hold the data stored in the database.</p>
@@ -2453,7 +2450,7 @@ run these steps for each <a data-link-type="dfn" href="#transaction-concept" id=
       <p>Clear the <a data-link-type="dfn" href="#transaction-concept" id="ref-for-transaction-concept-25">transaction</a>'s <a data-link-type="dfn" href="#transaction-cleanup-event-loop" id="ref-for-transaction-cleanup-event-loop-2">cleanup event loop</a>.</p>
     </ol>
    </div>
-   <aside class="note"> This behavior is invoked by <a data-link-type="biblio" href="#biblio-html">[HTML]</a>. It ensures that <a data-link-type="dfn" href="#transaction-concept" id="ref-for-transaction-concept-26">transactions</a> created by a script call
+   <aside class="note"> This behavior is invoked by <a data-link-type="biblio" href="#biblio-html52">[HTML52]</a>. It ensures that <a data-link-type="dfn" href="#transaction-concept" id="ref-for-transaction-concept-26">transactions</a> created by a script call
   to <code class="idl"><a data-link-type="idl" href="#dom-idbdatabase-transaction" id="ref-for-dom-idbdatabase-transaction-1">transaction()</a></code> are deactivated once the task that
   invoked the script has completed. The steps are run at most once for
   each <a data-link-type="dfn" href="#transaction-concept" id="ref-for-transaction-concept-27">transaction</a>. </aside>
@@ -2975,7 +2972,7 @@ through the properties of the <code class="idl"><a data-link-type="idl" href="#i
 access task source<a class="self-link" href="#database-access-task-source"></a></dfn>.</p>
    <h3 class="heading settled" data-level="4.1" id="request-api"><span class="secno">4.1. </span><span class="content">The <code class="idl"><a data-link-type="idl" href="#idbrequest" id="ref-for-idbrequest-3">IDBRequest</a></code> interface</span><a class="self-link" href="#request-api"></a></h3>
    <p>The <code class="idl"><a data-link-type="idl" href="#idbrequest" id="ref-for-idbrequest-4">IDBRequest</a></code> interface provides the means to access results of
-asynchronous requests to <a data-link-type="dfn" href="#database" id="ref-for-database-30">databases</a> and <a data-link-type="dfn" href="#database" id="ref-for-database-31">database</a> objects using <a data-link-type="dfn" href="https://www.w3.org/TR/html52/webappapis.html#event-handler-idl-event-handler-idl-attribute">event handler IDL attributes</a> <a data-link-type="biblio" href="#biblio-html">[HTML52]</a>.</p>
+asynchronous requests to <a data-link-type="dfn" href="#database" id="ref-for-database-30">databases</a> and <a data-link-type="dfn" href="#database" id="ref-for-database-31">database</a> objects using <a data-link-type="dfn" href="https://www.w3.org/TR/html52/webappapis.html#event-handler-idl-event-handler-idl-attribute">event handler IDL attributes</a> <a data-link-type="biblio" href="#biblio-html52">[HTML52]</a>.</p>
    <p>Every method for making asynchronous requests returns an <code class="idl"><a data-link-type="idl" href="#idbrequest" id="ref-for-idbrequest-5">IDBRequest</a></code> object that communicates back to the requesting
 application through events. This design means that any number of
 requests can be active on any <a data-link-type="dfn" href="#database" id="ref-for-database-32">database</a> at a time.</p>
@@ -6699,14 +6696,14 @@ and define abstract types such as <a data-link-type="dfn" href="#key" id="ref-fo
 replacing monkey patching.
 (<a href="https://github.com/w3c/IndexedDB/issues/140">bug #140</a>)</p>
      <li data-md="">
-      <p>Define <a data-link-type="dfn" href="#cleanup-indexed-database-transactions" id="ref-for-cleanup-indexed-database-transactions-1">cleanup Indexed Database transactions</a> hook for <a data-link-type="biblio" href="#biblio-html">[HTML]</a>,
+      <p>Define <a data-link-type="dfn" href="#cleanup-indexed-database-transactions" id="ref-for-cleanup-indexed-database-transactions-1">cleanup Indexed Database transactions</a> hook for <a data-link-type="biblio" href="#biblio-html52">[HTML52]</a>,
 replacing monkey patching.
 (<a href="https://github.com/w3c/IndexedDB/issues/87">bug #87</a>)</p>
      <li data-md="">
       <p>Fix handling of edge cases in key generation algorithm.
 (<a href="https://github.com/w3c/IndexedDB/issues/147">bug #147</a>)</p>
      <li data-md="">
-      <p>Use <a data-link-type="biblio" href="#biblio-html">[HTML]</a>'s <a data-link-type="abstract-op" href="https://www.w3.org/TR/html52/infrastructure.html#structuredserialize">StructuredSerialize</a> and <a data-link-type="abstract-op" href="https://www.w3.org/TR/html52/infrastructure.html#structureddeserialize">StructuredDeserialize</a> hooks.
+      <p>Use <a data-link-type="biblio" href="#biblio-html52">[HTML52]</a>'s <a data-link-type="abstract-op" href="https://www.w3.org/TR/html52/infrastructure.html#structuredserialize">StructuredSerialize</a> and <a data-link-type="abstract-op" href="https://www.w3.org/TR/html52/infrastructure.html#structureddeserialize">StructuredDeserialize</a> hooks.
 (<a href="https://github.com/w3c/IndexedDB/issues/170">bug #170</a>)</p>
      <li data-md="">
       <p>Use [<code class="idl"><a data-link-type="idl" href="https://heycam.github.io/webidl/#SameObject">SameObject</a></code>]/[<code class="idl"><a data-link-type="idl" href="https://heycam.github.io/webidl/#NewObject">NewObject</a></code>] in IDL where appropriate.
@@ -6716,7 +6713,7 @@ replacing monkey patching.
 the <a data-link-type="dfn" href="#asynchronously-execute-a-request" id="ref-for-asynchronously-execute-a-request-27">asynchronously execute a request</a> steps.
 (<a href="https://github.com/w3c/IndexedDB/issues/192">issue #192</a>)</p>
      <li data-md="">
-      <p>Use <a data-link-type="biblio" href="#biblio-html">[HTML]</a>'s <a data-link-type="abstract-op">StructuredSerializeForStorage</a> hook.
+      <p>Use <a data-link-type="biblio" href="#biblio-html52">[HTML52]</a>'s <a data-link-type="abstract-op">StructuredSerializeForStorage</a> hook.
 (<a href="https://github.com/w3c/IndexedDB/issues/197">issue #197</a>, <a href="https://github.com/w3c/IndexedDB/issues/197">issue #152</a>)</p>
      <li data-md="">
       <p>Define <a data-link-type="dfn" href="#database" id="ref-for-database-75">database</a>'s associated <a data-link-type="dfn" href="#database-upgrade-transaction" id="ref-for-database-upgrade-transaction-6">upgrade transaction</a> to
@@ -7441,7 +7438,7 @@ specification.</p>
    <dd><a href="https://tc39.github.io/ecma262/">ECMAScript Language Specification</a>. URL: <a href="https://tc39.github.io/ecma262/">https://tc39.github.io/ecma262/</a>
    <dt id="biblio-fileapi">[FileAPI]
    <dd>Arun Ranganathan; Jonas Sicking. <a href="https://www.w3.org/TR/FileAPI/">File API</a>. URL: <a href="https://www.w3.org/TR/FileAPI/">https://www.w3.org/TR/FileAPI/</a>
-   <dt id="biblio-html">[HTML52]
+   <dt id="biblio-html52">[HTML52]
    <dd><a href="https://www.w3.org/TR/html52/">HTML 5.2</a>. Steve Faulkner; Arron Eicholz; Travis Leithead; Alex Danilo; Sangwhan Moon. W3C. 9 May 2017. W3C Working Draft. URL: <a href="https://www.w3.org/TR/html52/">https://www.w3.org/TR/html52/</a>
    <dt id="biblio-infra">[INFRA]
    <dd>Anne van Kesteren; Domenic Denicola. <a href="https://infra.spec.whatwg.org/">Infra Standard</a>. Living Standard. URL: <a href="https://infra.spec.whatwg.org/">https://infra.spec.whatwg.org/</a>
